--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,14 @@ envlist =
     py3{7, 8, 9, 10}
     linters
 
+[gh-actions]
+python =
+    3.7: py37
+    3.8: py38
+    3.9: py39
+    3.10: py310
+    linters
+
 [base]
 python = python3
 skip_install = true
