Fix pylint workaround

--- a/tox.ini
+++ b/tox.ini
@@ -4,21 +4,18 @@ envlist =
     py3{7, 8, 9, 10}
     linters
 
+[base]
+python = python3.9
+skip_install = true
+package = frouros
+venv = {toxinidir}/.venv
+
 [gh-actions]
 python =
     3.7: py37
     3.8: py38
     3.9: py39, linters
     3.10: py310
-
-[base]
-python = python3
-skip_install = true
-package = frouros
-
-[pytest]
-addopts = -ra -q
-norecursedirs = docs
 
 [testenv]
 deps =
@@ -37,20 +34,6 @@ deps =
     black>=22.3,<22.4
 commands = black --check --diff {[base]package}
 
-[testenv:flake8]
-basepython = {[base]python}
-skip_install = {[base]skip_install}
-deps =
-    flake8>=4.0,<4.1
-    flake8-bugbear>=22.3,<22.4
-    flake8-docstrings>=1.6,<1.7
-    flake8-typing-imports>=1.12,<1.13
-    flake8-colors>=0.1,<0.2
-    pep8-naming>=0.12,<0.13
-    pydocstyle>=6.1,<6.2
-commands = flake8
-
-# Flake8 Configuration
 [flake8]
 # Set to match black line length (default 88)
 max-line-length = 88
@@ -70,14 +53,18 @@ exclude =
 max-complexity = 10
 format = ${cyan}%(path)s${reset}:${yellow_bold}%(row)d${reset}:${green_bold}%(col)d${reset}: ${red_bold}%(code)s${reset} %(text)s
 
-[testenv:pylint]
+[testenv:flake8]
 basepython = {[base]python}
 skip_install = {[base]skip_install}
 deps =
-    pylint>=2.12,<2.13
-commands =
-    # FIXME: Workaround to use pylint from .venv in order to avoid E0401.
-    {toxinidir}/.venv/bin/pylint {[base]package} --good-names=e,f --disable=too-many-instance-attributes,consider-using-with
+    flake8>=4.0,<4.1
+    flake8-bugbear>=22.3,<22.4
+    flake8-docstrings>=1.6,<1.7
+    flake8-typing-imports>=1.12,<1.13
+    flake8-colors>=0.1,<0.2
+    pep8-naming>=0.12,<0.13
+    pydocstyle>=6.1,<6.2
+commands = flake8
 
 [testenv:mypy]
 basepython = {[base]python}
@@ -87,8 +74,25 @@ deps =
     types-requests
 commands = mypy {[base]package}
 
+[pytest]
+addopts = -ra -q
+norecursedirs = docs
+
+[testenv:pylint]
+basepython = {[base]python}
+skip_install = {[base]skip_install}
+deps =
+    pylint>=2.12,<2.13
+commands =
+    pylint {[base]package} --good-names=e,f --disable=too-many-instance-attributes,consider-using-with
+
 [testenv:linters]
 skip_install = {[base]skip_install}
+setenv =
+    PYTHONPATH = $PYTHONPATH:{toxinidir}:{[base]venv}/lib/{[base]python}/site-packages
+allowlist_externals =
+    {[base]venv}/bin/black
+    {[base]venv}/bin/pylint
 deps =
     {[testenv:black]deps}
     {[testenv:flake8]deps}
