--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,13 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install tox==3.24.5 tox-gh-actions==2.9.1
 
+      - name: Install frouros
+        if: ${{ matrix.python-version }} == '3.9'
+        run: |
+          python -m venv .venv
+          source .venv/bin/activate
+          pip install -e .
+
       - name: Run tox
         run: tox
 
