--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,10 +29,11 @@ jobs:
           python -m pip install tox==3.24.5 tox-gh-actions==2.9.1
 
       - name: Install frouros
-        if: ${{ matrix.python-version }} == '3.9'
+        if: matrix.python-version == 3.9
         run: |
           python -m venv .venv
           source .venv/bin/activate
+          pip install pytest>=7.1.1,<7.2
           pip install -e .
 
       - name: Run tox
