--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,12 +28,12 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install tox==3.24.5 tox-gh-actions==2.9.1
 
-      - name: Install frouros
+      - name: Optional - Install frouros (only used by linters)
         if: matrix.python-version == 3.9
         run: |
           python -m venv .venv
           source .venv/bin/activate
-          pip install pytest>=7.1.1,<7.2
+          pip install "pytest>=7.1.1,<7.2"
           pip install -e .
 
       - name: Run tox
