Add missing coverage report in terminal

--- a/tox.ini
+++ b/tox.ini
@@ -22,6 +22,7 @@ deps =
     pytest>=7.1.1,<7.2
     pytest-cov>=3.0.0,<3.1
 commands = pytest --cov={[base]package} \
+           --cov-report term \
            --cov-report=xml
 
 [testenv:black]
