Add supevised Drift Detection Method

--- a/tox.ini
+++ b/tox.ini
@@ -70,6 +70,7 @@ skip_install = {[base]skip_install}
 deps =
     mypy>=0.941,<1.0
     types-requests
+plugins = numpy.typing.mypy_plugin
 commands = mypy {[base]package}
 
 [pytest]
@@ -82,7 +83,7 @@ skip_install = {[base]skip_install}
 deps =
     pylint>=2.12,<2.13
 commands =
-    pylint {[base]package} --good-names=e,f --disable=too-many-instance-attributes,consider-using-with
+    pylint {[base]package} --good-names=e,f,X,y --disable=too-many-instance-attributes,consider-using-with
 
 [testenv:linters]
 skip_install = {[base]skip_install}
