Add supervised DDM classification test

--- a/tox.ini
+++ b/tox.ini
@@ -83,7 +83,7 @@ skip_install = {[base]skip_install}
 deps =
     pylint>=2.12,<2.13
 commands =
-    pylint {[base]package} --good-names=e,f,X,y --disable=too-many-instance-attributes,consider-using-with
+    pylint {[base]package} --good-names=df,e,f,X,X_test,X_ref,X_sample,y --disable=too-many-instance-attributes,consider-using-with
 
 [testenv:linters]
 skip_install = {[base]skip_install}
