--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,6 @@
 name = "frouros"
 version = "0.1.0"
 description = "A Python library for drift detection"
-license = "BSD-3-Clause"
 authors = [
     {name = "Jaime Céspedes Sisniega", email = "cespedes@ifca.unican.es"}
 ]
@@ -20,13 +19,14 @@ keywords = [
 requires-python = ">=3.7,<3.11"
 dependencies = [
     "numpy>=1.21.0,<1.22",
+    # FIXME: Remove pandas dependency (needed for pytest). Load test datasets with another method.
+    "pandas>=1.3.5,<1.4",
     "requests>=2.27.0,<2.28",
     "scikit-learn>=1.0.0,<1.1",
     "scipy>=1.7.0,<1.8",
-    "tqdm>=4.63.0,<4.64"
+    "tqdm>=4.63.0,<4.64",
 ]
-dynamic = ["version",
-           "description"]
+#dynamic = ["description"]
 
 [project.optional-dependencies]
 docs = [
@@ -38,10 +38,14 @@ docs = [
 [project.urls]
 repository = "https://github.com/jaime-cespedes-sisniega/frouros"
 
+[project.license]
+file = "LICENSE"
+
 [build-system]
 requires = [
-    "setuptools>=60.10,<61.0",
+    "setuptools>=62.1.0,<62.2",
     "wheel>=0.37.0<0.38",
     "toml>=0.10.2,<0.11",
-    "build>=0.7.0,<0.8"]
+    "build>=0.7.0,<0.8",
+]
 build-backend = "setuptools.build_meta"
