--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install tox==3.24.5 tox-gh-actions==2.9.1
+          python -m pip install tox==3.24.5 tox-gh-actions==2.9.1 importlib-resources==5.6.0
 
       - name: Optional - Install frouros (only used by linters)
         if: matrix.python-version == 3.9
