--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "scikit-learn>=1.0.0,<1.1",
     "scipy>=1.7.0,<1.8",
     "tqdm>=4.63.0,<4.64",
+    "scipy>=1.7.3,<1.8"
 ]
 #dynamic = ["version",
 #           "description"]
