--- a/tox.ini
+++ b/tox.ini
@@ -35,7 +35,7 @@ commands = black --check --diff {[base]package}
 [flake8]
 # Set to match black line length (default 88)
 max-line-length = 88
-ignore = I902, W503
+ignore = D401, I902, W503
 exclude =
     .tox,
     .git,
@@ -83,7 +83,7 @@ skip_install = {[base]skip_install}
 deps =
     pylint>=2.12,<2.13
 commands =
-    pylint {[base]package} --good-names=df,e,f,X,X_test,X_ref,X_sample,y --disable=too-many-instance-attributes,consider-using-with
+    pylint {[base]package} --good-names=df,e,f,i,X,X_test,X_ref,X_ref_,X_sample,y --disable=too-many-instance-attributes,consider-using-with
 
 [testenv:linters]
 skip_install = {[base]skip_install}
