Refactor error_scorer function

--- a/tox.ini
+++ b/tox.ini
@@ -83,7 +83,7 @@ skip_install = {[base]skip_install}
 deps =
     pylint>=2.12,<2.13
 commands =
-    pylint {[base]package} --good-names=df,e,f,i,p,X,X_new_context,X_ref,X_ref_,_X_ref_,X_sample,X_test,y --disable=too-many-instance-attributes,consider-using-with,too-few-public-methods --ignore-comments=yes --ignore-docstrings=yes --ignore-imports=yes
+    pylint {[base]package} --good-names=df,e,f,i,p,X,X_new_context,X_ref,X_ref_,_X_ref_,X_sample,X_test,y --disable=too-many-instance-attributes,consider-using-with,too-few-public-methods --ignore-comments=yes --ignore-docstrings=yes --ignore-imports=yes --min-similarity-lines=8
 
 [testenv:linters]
 skip_install = {[base]skip_install}
