Add transformations CategoricalDetectors

--- a/tox.ini
+++ b/tox.ini
@@ -83,7 +83,7 @@ skip_install = {[base]skip_install}
 deps =
     pylint>=2.12,<2.13
 commands =
-    pylint {[base]package} --good-names=df,e,f,i,p,X,X_concat,X_new_context,X_num_samples,X_permuted,X_permuted_num_samples,X_permuted_,X_permuted_concat,X_permuted_ref_,X_permuted_ref_num_samples,X_ref,X_ref_,_X_ref_,X_ref_num_samples,X_sample,X_test,y --disable=too-many-instance-attributes,consider-using-with,too-few-public-methods --ignore-comments=yes --ignore-docstrings=yes --ignore-imports=yes --min-similarity-lines=8
+    pylint {[base]package} --good-names=df,e,f,i,p,X,X_concat,X_new_context,X_num_samples,X_permuted,X_permuted_num_samples,X_permuted_,X_permuted_concat,X_permuted_ref_,X_permuted_ref_num_samples,X_preprocessed,X_ref,X_ref_,_X_ref_,X_ref_num_samples,X_sample,X_test,y --disable=too-many-instance-attributes,consider-using-with,too-few-public-methods --ignore-comments=yes --ignore-docstrings=yes --ignore-imports=yes --min-similarity-lines=8
 
 [testenv:linters]
 skip_install = {[base]skip_install}
