Add semi-supervised Margin Density Based MD3-SVM

--- a/tox.ini
+++ b/tox.ini
@@ -83,7 +83,7 @@ skip_install = {[base]skip_install}
 deps =
     pylint>=2.12,<2.13
 commands =
-    pylint {[base]package} --good-names=df,e,f,i,j,m,p,X,X_concat,X_counter,X_hist,X_merge,X_new_context,X_num_samples,X_permuted,X_permuted_num_samples,X_permuted_,X_permuted_concat,X_permuted_ref_,X_permuted_ref_num_samples,X_preprocessed,X_ref,X_ref_hist,X_ref_counter,X_ref_rvs,X_ref_rv_histogram,X_rvs,X_rv_histogram,X_ref_,_X_ref_,X_ref_num_samples,X_sample,X_test,y --disable=too-many-instance-attributes,consider-using-with,too-few-public-methods --ignore-comments=yes --ignore-docstrings=yes --ignore-imports=yes --max-args=7 --min-similarity-lines=12 --extension-pkg-whitelist=scipy.special
+    pylint {[base]package} --good-names=b,df,e,f,i,j,m,p,w,X,X_concat,X_counter,X_fold_test,X_fold_train,X_hist,X_merge,X_new_context,X_num_samples,X_permuted,X_permuted_num_samples,X_permuted_,X_permuted_concat,X_permuted_ref_,X_permuted_ref_num_samples,X_preprocessed,X_ref,X_ref_hist,X_ref_counter,X_ref_rvs,X_ref_rv_histogram,X_rvs,X_rv_histogram,X_ref_,_X_ref_,X_ref_num_samples,X_sample,X_samples,X_test,X_train,y --disable=too-many-instance-attributes,consider-using-with,too-few-public-methods --ignore-comments=yes --ignore-docstrings=yes --ignore-imports=yes --max-args=7 --min-similarity-lines=12 --extension-pkg-whitelist=scipy.special
 
 [testenv:linters]
 skip_install = {[base]skip_install}
