--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,13 @@ keywords = [
     "semi-supervised-drift-detection",
     "machine-learning"
 ]
+classifiers = [
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+]
 requires-python = ">=3.8,<3.11"
 dependencies = [
     "numpy>=1.23.0,<1.24",
