Update description in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "frouros"
 version = "0.1.0"
-description = "A Python library for drift detection"
+description = "A Python library for drift detection in Machine Learning problems"
 # FIXME: Solve problem reading license
 # license = "BSD-3-Clause"
 authors = [
