--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,8 +36,9 @@ dependencies = [
 [project.optional-dependencies]
 docs = [
     "sphinx>=4.5.0,<5.0",
-    "pydata-sphinx-theme>=0.8.0,<0.9",
-    "myst-parser>=0.17.0,<0.18"
+    "sphinx-book-theme>=0.3.0,<0.4",
+    "myst-parser>=0.18.0,<0.19",
+    "myst-nb>=0.16.0,<0.17"
 ]
 
 [project.urls]
