--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,6 @@
 name = "frouros"
 version = "0.1.0"
 description = "A Python library for drift detection in Machine Learning problems"
-license = "BSD-3-Clause"
 authors = [
     {name = "Jaime Céspedes Sisniega", email = "cespedes@ifca.unican.es"}
 ]
@@ -43,11 +42,14 @@ docs = [
 [project.urls]
 repository = "https://github.com/jaime-cespedes-sisniega/frouros"
 
+[project.license]
+file = "LICENSE"
+
 [build-system]
 requires = [
-    "setuptools>=60.10,<61.0",
+    "setuptools>=63.2,<64.0",
     "wheel>=0.37.1<0.38",
     "toml>=0.10.2,<0.11",
-    "build>=0.7.0,<0.8",
+    "build>=0.8.0,<0.9",
 ]
 build-backend = "setuptools.build_meta"
