--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
           python -m venv .venv
           source .venv/bin/activate
           pip install "pytest>=7.1.1,<7.2"
-          pip install .
+          python -m pip install .
 
       - name: Run tox
         run: tox
