--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,15 +26,15 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install tox==3.24.5 tox-gh-actions==2.9.1
+          python -m pip install tox==3.25.1 tox-gh-actions==2.9.1
 
       - name: Optional - Install frouros (only used by linters)
         if: matrix.python-version == 3.9
         run: |
           python -m venv .venv
           source .venv/bin/activate
-          pip install "pytest>=7.1.1,<7.2"
-          python -m pip install .
+          pip install "pytest>=7.1.2,<7.2"
+          pip install .
 
       - name: Run tox
         run: tox
