Add supervised DDM Based HDDM-W

--- a/tox.ini
+++ b/tox.ini
@@ -98,7 +98,7 @@ deps =
     {[testenv:mypy]deps}
     {[testenv:pylint]deps}
 commands =
-    #{[testenv:black]commands}
-    #{[testenv:flake8]commands}
+    {[testenv:black]commands}
+    {[testenv:flake8]commands}
     {[testenv:mypy]commands}
     {[testenv:pylint]commands}
