--- a/.github/workflows/code_coverage.yml
+++ b/.github/workflows/code_coverage.yml
@@ -4,7 +4,7 @@ on:
       - closed
 
 jobs:
-  if_merged:
+  code-coverage:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-20.04
     steps:
@@ -18,10 +18,10 @@ jobs:
 
       - name: Install dependencies
         run: |
+          python -m pip install --upgrade pip
+          python -m pip install tox==3.24.5
           python -m venv .venv
           source .venv/bin/activate
-          pip install --upgrade pip
-          pip install tox==3.24.5
           pip install -e .
 
       - name: Run tox
