--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,10 +15,15 @@ keywords = [
     "supervised-drift-detection",
     "unsupervised-drift-detection",
     "semi-supervised-drift-detection",
-    "machine-learning"
+    "machine-learning",
+    "data-science",
 ]
 classifiers = [
+    "Development Status :: 5 - Production/Stable",
+    "Intended Audience :: Science/Research",
+    "Topic :: Scientific/Engineering",
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
+    "Topic :: Scientific/Engineering :: Mathematics",
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
