--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "frouros"
-version = "0.1.0"
+version = "0.0.1"
 description = "A Python library for drift detection in Machine Learning problems"
 authors = [
     {name = "Jaime Céspedes Sisniega", email = "cespedes@ifca.unican.es"}
@@ -54,7 +54,7 @@ pytorch = [
 homepage = "https://frouros.readthedocs.io"
 repository = "https://github.com/IFCA/frouros"
 documentation = "https://frouros.readthedocs.io"
-# download = "https://pypi.org/project/frouros/#files"
+download = "https://pypi.org/project/frouros/"
 
 [build-system]
 requires = [
