--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ classifiers = [
 ]
 requires-python = ">=3.8,<3.11"
 dependencies = [
+    "matplotlib>=3.5.0,<3.6",
     "numpy>=1.23.0,<1.24",
     "requests>=2.27.0,<2.28",
     "scikit-learn>=1.1.0,<1.2",
