Add ResetOnDataDrift callback

--- a/tox.ini
+++ b/tox.ini
@@ -18,8 +18,9 @@ python =
 
 [testenv]
 deps =
-    pytest>=7.1.1,<7.2
-    pytest-cov>=3.0.0,<3.1
+    pytest>=7.2.1,<7.3
+    pytest-cov>=4.0.0,<4.1
+    pytest-mock>=3.10.0<3.11
 commands = pytest --cov={[base]package} \
            --cov-report term \
            --cov-report=xml
