Add History callback

--- a/tox.ini
+++ b/tox.ini
@@ -21,6 +21,7 @@ deps =
     pytest>=7.2.1,<7.3
     pytest-cov>=4.0.0,<4.1
     pytest-mock>=3.10.0<3.11
+    scikit-learn>=1.2.0<1.3
 commands = pytest --cov={[base]package} \
            --cov-report term \
            --cov-report=xml
@@ -84,7 +85,7 @@ skip_install = {[base]skip_install}
 deps =
     pylint>=2.12,<2.13
 commands =
-    pylint {[base]package} --good-names=b,df,e,f,i,j,m,p,w,x,y,z,X,js,kl,X_concat,X_counter,X_fold_test,X_fold_train,X_hist,X_merge,X_new_context,X_num_samples,X_percents,X_permuted,X_permuted_num_samples,X_permuted_,X_permuted_concat,X_permuted_ref_,X_permuted_ref_num_samples,X_preprocessed,X_ref,X_ref_hist,X_ref_counter,X_ref_percents,X_ref_rvs,X_ref_rv_histogram,X_rvs,X_rv_histogram,X_ref_,_X_ref_,X_ref_num_samples,X_ref_univariate,X_ref_multivariate,X_sample,X_samples,X_test,X_test_univariate,X_test_multivariate,X_train,y,Y,Y_hist,Y_percents,Y_num_samples --disable=too-many-instance-attributes,consider-using-with,too-few-public-methods --ignore-comments=yes --ignore-docstrings=yes --ignore-imports=yes --max-args=7 --min-similarity-lines=12 --extension-pkg-whitelist=scipy.special
+    pylint {[base]package} --good-names=b,df,e,f,i,j,m,p,w,x,y,z,X,js,kl,X_concat,X_counter,X_fold_test,X_fold_train,X_hist,X_merge,X_new_context,X_num_samples,X_percents,X_permuted,X_permuted_num_samples,X_permuted_,X_permuted_concat,X_permuted_ref_,X_permuted_ref_num_samples,X_preprocessed,X_ref,X_ref_hist,X_ref_counter,X_ref_percents,X_ref_rvs,X_ref_rv_histogram,X_rvs,X_rv_histogram,X_ref,_X_ref,X_ref_num_samples,X_ref_univariate,X_ref_multivariate,X_sample,X_samples,X_test,X_test_univariate,X_test_multivariate,X_train,y,Y,Y_hist,Y_percents,Y_num_samples --disable=too-many-instance-attributes,consider-using-with,too-few-public-methods --ignore-comments=yes --ignore-docstrings=yes --ignore-imports=yes --max-args=7 --min-similarity-lines=12 --extension-pkg-whitelist=scipy.special
 
 [testenv:linters]
 skip_install = {[base]skip_install}
