--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,8 @@ dependencies = [
     "matplotlib>=3.6.0,<3.7",
     "numpy>=1.24.0,<1.25",
     "requests>=2.28.0,<2.29",
-    "scipy>=1.10.0,<1.11"
+    "scipy>=1.10.0,<1.11",
+    "tqdm>=4.64.0,<4.65",
 ]
 
 [project.optional-dependencies]
@@ -41,7 +42,7 @@ docs = [
     "sphinx-book-theme>=0.3.0,<0.4",
     "sphinxcontrib-bibtex>=2.4.0,<2.5",
     "myst-parser>=0.18.0,<0.19",
-    "myst-nb>=0.16.0,<0.17"
+    "myst-nb>=0.16.0,<0.17",
 ]
 
 [project.urls]
