--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,11 @@ docs = [
     "myst-parser>=0.18.0,<0.19",
     "myst-nb>=0.17.0,<0.18",
 ]
+notebooks = [
+    "scikit-learn>=1.2.0,<1.3",
+    "torch>=1.13.0,<1.14",
+    "torchvision>=0.14.0,<0.15",
+]
 
 [project.urls]
 homepage = "https://frouros.readthedocs.io"
