--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ notebooks = [
     "scikit-learn>=1.2.0,<1.3",
     "torch>=1.13.0,<1.14",
     "torchvision>=0.14.0,<0.15",
+    "ipywidgets>=8.0.0,<8.1",
 ]
 
 [project.urls]
