--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,6 +1,6 @@
 name: Bug Report
 description: Create a report to help us reproduce and correct the bug
-labels: ['Bug']
+labels: ["bug", "needs triage"]
 
 body:
 - type: markdown
@@ -82,4 +82,4 @@ body:
 - type: markdown
   attributes:
     value: >
-      Thanks for contributing 🎉!
+      Thanks for contributing 🎉! We will review your bug report as soon as possible.
