--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ keywords = [
     "data-drift",
     "machine-learning",
     "data-science",
+    "machine-learning-operations",
+    "machine-learning-systems",
 ]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
