Add Python 3.12 to tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 minversion = 3.24.5
 envlist =
-    py3{9, 10, 11}
+    py3{9, 10, 11, 12}
     linters
 
 [base]
@@ -15,8 +15,11 @@ python =
     3.9: py39, linters
     3.10: py310
     3.11: py311
+    3.12: py312
 
 [testenv]
+# Force to upgrade pip/wheel/setuptools to the latest version
+download = True
 deps =
     pytest>=7.2.1,<7.3
     pytest-cov>=4.0.0,<4.1
