--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3 :: Only",
 ]
-requires-python = ">=3.9,<3.12"
+requires-python = ">=3.9,<3.13"
 dependencies = [
     "matplotlib>=3.6.0,<3.9",
     "numpy>=1.24.0,<1.27",
@@ -66,9 +66,9 @@ download = "https://pypi.org/project/frouros/"
 
 [build-system]
 requires = [
-    "setuptools>=60.10,<61.0",
-    "wheel>=0.37.1<0.38",
+    "setuptools>=61.0,<69.0",
+    "wheel>=0.37.1,<0.43",
     "toml>=0.10.2,<0.11",
-    "build>=0.7.0,<0.8",
+    "build>=0.7.0,<1.1",
 ]
 build-backend = "setuptools.build_meta"
