--- a/.github/workflows/code_coverage.yml
+++ b/.github/workflows/code_coverage.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install tox==3.24.5
+          python -m pip install wheel==0.42.0 tox==3.24.5
           python -m venv .venv
           source .venv/bin/activate
           pip install -e .
