Revert mypy version in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -70,7 +70,8 @@ commands = flake8
 basepython = {[base]python}
 skip_install = {[base]skip_install}
 deps =
-    mypy>=1.8.0,<1.9
+    # FIXME: 0.971 version generates new unhandled warnings
+    mypy>=0.941,<0.971
     types-requests>=2.31.0,<2.32
 plugins = numpy.typing.mypy_plugin
 commands = mypy {[base]package}
