Add missing required flag for Python versions in bug report

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -77,6 +77,8 @@ body:
       ```python
       import platform; print(f"'{platform.python_version()}'")
       ```
+  validations:
+    required: true
 - type: textarea
   attributes:
     label: Frouros version
