--- a/tox.ini
+++ b/tox.ini
@@ -29,79 +29,36 @@ commands = pytest --cov={[base]package} \
            --cov-report term \
            --cov-report=xml
 
-[testenv:black]
+[pytest]
+addopts = -ra -q
+norecursedirs = docs
+
+[testenv:ruff]
 basepython = {[base]python}
 skip_install = {[base]skip_install}
 deps =
-    black>=23.12.1,<24.0
-commands = black --check --diff {[base]package}
-
-[flake8]
-# Set to match black line length (default 88)
-max-line-length = 88
-ignore = D401, I902, W503
-exclude =
-    .tox,
-    .git,
-    docs/source/conf.py,
-    build,
-    dist,
-    *.pyc,
-    *.egg-info,
-    .cache,
-    .eggs,
-    .venv,
-    .env
-max-complexity = 10
-
-[testenv:flake8]
-basepython = {[base]python}
-skip_install = {[base]skip_install}
-deps =
-    flake8>=7.0.0,<8.0
-    flake8-bugbear>=23.12.2,<24.0
-    flake8-docstrings>=1.7.0,<1.8
-    flake8-typing-imports>=1.15.0,<1.16
-    pep8-naming>=0.13.3,<0.14
-    pydocstyle>=6.3.0,<6.4
-commands = flake8
+    ruff>=0.3.4,<0.4
+commands = ruff check --config pyproject.toml .
+           ruff format --config pyproject.toml .
 
 [testenv:mypy]
 basepython = {[base]python}
 skip_install = {[base]skip_install}
 deps =
-    # FIXME: 0.971 version generates new unhandled warnings
-    mypy>=0.941,<0.971
+    mypy>=1.9.0,<1.10
     types-requests>=2.31.0,<2.32
-plugins = numpy.typing.mypy_plugin
-commands = mypy {[base]package}
-
-[pytest]
-addopts = -ra -q
-norecursedirs = docs
-
-[testenv:pylint]
-basepython = {[base]python}
-skip_install = {[base]skip_install}
-deps =
-    pylint>=3.0.3,<3.1.0
-commands =
-    pylint {[base]package} --good-names=b,d,df,e,f,h,i,j,m,n,p,w,x,y,z,r,D,N,X,en,js,kl,S1,S2,Tt,XY_chunks_combinations,X_chunks,X_chunks_combinations,X_concat,X_counter,X_extra,X_fold_test,X_fold_train,X_hist,X_merge,X_new_context,X_new_ref,X_num_samples,X_queue,X_sorted,X_percents,X_permuted,X_permuted_num_samples,X_permuted_,X_permuted_concat,X_permuted_ref_,X_permuted_ref_num_samples,X_preprocessed,X_ref,X_ref_hist,X_ref_counter,X_ref_percents,X_ref_rvs,X_ref_rv_histogram,X_rvs,X_rv_histogram,X_ref,_X_ref,X_ref_num_samples,X_ref_univariate,X_ref_multivariate,X_sample,X_samples,X_test,X_test_univariate,X_test_multivariate,X_train,y,Y,Y_chunks,Y_chunks_copy,Y_chunks_combinations,Y_hist,Y_percents,Y_num_samples,_X_num_samples,X_size,Y_size --disable=too-many-instance-attributes,consider-using-with,too-few-public-methods --ignore-comments=yes --ignore-docstrings=yes --ignore-imports=yes --max-args=7 --min-similarity-lines=13 --extension-pkg-whitelist=scipy.special
+    types-toml>=0.10.0,<0.11
+    types-tqdm>=4.66,<4.67
+commands = mypy --config-file pyproject.toml .
 
 [testenv:linters]
+basepython = {[base]python}
 skip_install = {[base]skip_install}
 setenv =
     PYTHONPATH = $PYTHONPATH:{toxinidir}:{[base]venv}/lib/{[base]python}/site-packages
-allowlist_externals =
-    {[base]venv}/bin/black
-    {[base]venv}/bin/pylint
 deps =
-    {[testenv:black]deps}
-    {[testenv:flake8]deps}
+    {[testenv:ruff]deps}
     {[testenv:mypy]deps}
-    {[testenv:pylint]deps}
 commands =
-    {[testenv:black]commands}
-    {[testenv:flake8]commands}
+    {[testenv:ruff]commands}
     {[testenv:mypy]commands}
-    {[testenv:pylint]commands}
