Set coverage to fail if less than 90%

--- a/tox.ini
+++ b/tox.ini
@@ -27,7 +27,8 @@ deps =
     scikit-learn>=1.3.2,<1.4
 commands = pytest --cov={[base]package} \
            --cov-report term \
-           --cov-report=xml
+           --cov-report=xml \
+           --cov-fail-under=90
 
 [pytest]
 addopts = -ra -q
