--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,12 +41,12 @@ jobs:
           python -m venv .venv
 
       - name: Activate virtual environment (Windows)
-        if: matrix.os == windows-2022
+        if: matrix.os == 'windows-2022'
         run: |
           .venv\Scripts\activate
 
       - name: Activate virtual environment (Linux/macOS)
-        if: matrix.os != windows-2022
+        if: matrix.os != 'windows-2022'
         run: |
           source .venv/bin/activate
 
