--- a/tox.ini
+++ b/tox.ini
@@ -13,9 +13,9 @@ venv = {toxinidir}/.venv
 [gh-actions]
 python =
     3.9: py39, linters
-    3.10: py310
-    3.11: py311
-    3.12: py312
+    3.10: py310, linters
+    3.11: py311, linters
+    3.12: py312, linters
 
 [testenv]
 # Force to upgrade pip/wheel/setuptools to the latest version
