--- a/tox.ini
+++ b/tox.ini
@@ -20,11 +20,7 @@ python =
 [testenv]
 # Force to upgrade pip/wheel/setuptools to the latest version
 download = True
-deps =
-    pytest>=8.3.1,<8.4
-    pytest-cov>=5.0.0,<5.1
-    pytest-mock>=3.14.0,<3.15
-    scikit-learn>=1.5.1,<1.6
+extras = dev-tests
 commands = pytest --cov={[base]package} \
            --cov-report term \
            --cov-report=xml \
@@ -35,31 +31,16 @@ addopts = -ra -q
 norecursedirs = docs
 
 [testenv:ruff]
-basepython = {[base]python}
-skip_install = {[base]skip_install}
-deps =
-    ruff>=0.5.6,<0.6
+extras = dev-ruff
 commands = ruff check --config pyproject.toml .
            ruff format --config pyproject.toml .
 
 [testenv:mypy]
-basepython = {[base]python}
-skip_install = {[base]skip_install}
-deps =
-    mypy>=1.11.0,<1.12
-    types-requests>=2.32.0,<2.33
-    types-toml>=0.10.0,<0.11
-    types-tqdm>=4.66,<4.67
+extras = dev-mypy
 commands = mypy --config-file pyproject.toml .
 
 [testenv:linters]
-basepython = {[base]python}
-skip_install = {[base]skip_install}
-setenv =
-    PYTHONPATH = $PYTHONPATH:{toxinidir}:{[base]venv}/lib/{[base]python}/site-packages
-deps =
-    {[testenv:ruff]deps}
-    {[testenv:mypy]deps}
+extras = dev-linters
 commands =
     {[testenv:ruff]commands}
     {[testenv:mypy]commands}
