--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,7 +53,7 @@ docs = [
     "myst-nb>=1.0.0,<1.2",
 ]
 notebooks = [
-    "scikit-learn>=1.3.2,<1.6",
+    "scikit-learn>=1.5.1,<1.6",
     "torch>=2.1.2,<2.6",
     "torchvision>=0.16.2,<0.21",
     "ipywidgets>=8.1.1,<8.2",
@@ -73,11 +73,9 @@ dev-mypy = [
     "types-toml>=0.10.0,<0.11",
     "types-tqdm>=4.66,<4.68",
 ]
-dev-linters = [
-    "frouros[dev-ruff, dev-mypy]",
-]
 dev = [
-    "frouros[dev-tests, dev-linters]",
+    "frouros[docs,notebooks,dev-tests,dev-ruff,dev-mypy]",
+    "tox>=4.23.2,<4.24",
 ]
 
 [project.urls]
