--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-minversion = 4.16.0
+minversion = 4.23.2
 envlist =
     py3{9, 10, 11, 12}
     linters
@@ -9,6 +9,12 @@ python = python3
 skip_install = true
 package = frouros
 venv = {toxinidir}/.venv
+deps =
+    # Package used as a workaround to install the dependencies read from pyproject.toml dev section.
+    toml>=0.10.2,<0.11
+pyproject_reader =
+    # Workaround to install the dependencies read from pyproject.toml dev section. Use toml to read the file and install the dependencies.
+    python -c "import toml, subprocess; deps = toml.load('pyproject.toml')['project']['optional-dependencies']['{env:DEPS_SECTION}']; subprocess.run(['pip', 'install'] + deps)"
 
 [gh-actions]
 python =
@@ -20,8 +26,13 @@ python =
 [testenv]
 # Force to upgrade pip/wheel/setuptools to the latest version
 download = True
-extras = dev-tests
-commands = pytest --cov={[base]package} \
+deps = {[base]deps}
+setenv =
+    DEPS_SECTION = dev-tests
+commands_pre =
+    {[base]pyproject_reader}
+commands =
+    pytest --cov={[base]package} \
            --cov-report term \
            --cov-report=xml \
            --cov-fail-under=90
@@ -31,16 +42,36 @@ addopts = -ra -q
 norecursedirs = docs
 
 [testenv:ruff]
-extras = dev-ruff
+basepython = {[base]python}
+skip_install = {[base]skip_install}
+deps = {[base]deps}
+setenv =
+    DEPS_SECTION = dev-ruff
+commands_pre =
+    {[base]pyproject_reader}
 commands = ruff check --config pyproject.toml .
            ruff format --config pyproject.toml .
 
 [testenv:mypy]
-extras = dev-mypy
+basepython = {[base]python}
+skip_install = {[base]skip_install}
+deps = {[base]deps}
+setenv =
+    DEPS_SECTION = dev-mypy
+commands_pre =
+    {[base]pyproject_reader}
 commands = mypy --config-file pyproject.toml .
 
 [testenv:linters]
-extras = dev-linters
+basepython = {[base]python}
+skip_install = {[base]skip_install}
+setenv =
+    PYTHONPATH = $PYTHONPATH:{toxinidir}:{[base]venv}/lib/{[base]python}/site-packages
+deps =
+    {[base]deps}
+commands_pre =
+    {[testenv:ruff]commands_pre}
+    {[testenv:mypy]commands_pre}
 commands =
     {[testenv:ruff]commands}
     {[testenv:mypy]commands}
