Shorten tox.ini workaround comment

--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ deps =
     # Package used as a workaround to install the dependencies read from pyproject.toml dev section.
     toml>=0.10.2,<0.11
 pyproject_reader =
-    # Workaround to install the dependencies read from pyproject.toml dev section. Use toml to read the file and install the dependencies.
+    # Workaround to install the dependencies read from pyproject.toml dev section.
     python -c "import toml, subprocess; deps = toml.load('pyproject.toml')['project']['optional-dependencies']['{env:DEPS_SECTION}']; subprocess.run(['pip', 'install'] + deps)"
 
 [gh-actions]
