Add python3.13 to tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 minversion = 4.16.0
 envlist =
-    py3{9, 10, 11, 12}
+    py3{9, 10, 11, 12, 13}
     linters
 
 [base]
@@ -16,6 +16,7 @@ python =
     3.10: py310, linters
     3.11: py311, linters
     3.12: py312, linters
+    3.13: py313, linters
 
 [testenv]
 # Force to upgrade pip/wheel/setuptools to the latest version
