ENH: remove python version upper bound, and added python3.14 to the list of tests

--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,7 @@ python =
     3.11: py311, linters
     3.12: py312, linters
     3.13: py313, linters
+    3.14: py314, linters
 
 [testenv]
 # Force to upgrade pip/wheel/setuptools to the latest version
