--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,9 +34,10 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
     "Programming Language :: Python :: 3 :: Only",
 ]
-requires-python = ">=3.9,<3.14"
+requires-python = ">=3.9"
 dependencies = [
     "matplotlib>=3.8.2,<3.10",
     "numpy>=1.26.3,<2.2",
