--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,8 @@ jobs:
       matrix:
         os: [
           ubuntu-24.04,
-          windows-2022,
-          macos-14,
+          # windows-2022,
+          # macos-14,
         ]
         python-version: [
           '3.9',
