--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
       matrix:
         os: [
           ubuntu-24.04,
-          # windows-2022,
+          windows-2025,
           # macos-14,
         ]
         python-version: [
