--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
       matrix:
         os: [
           ubuntu-24.04,
-          windows-2025,
+          # windows-2025,
           # macos-14,
         ]
         python-version: [
@@ -41,6 +41,13 @@ jobs:
       - name: Create virtual environment
         run: |
           python -m venv .venv
+
+      - name: Install additional dependencies
+        if: matrix.os == 'ubuntu-24.04'
+        run: |
+          sudo apt-get update
+          sudo apt install -y libopenblas-dev 
+
 
       - name: Activate virtual environment (Windows)
         if: matrix.os == 'windows-2025'
