--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
       matrix:
         os: [
           ubuntu-24.04,
-          windows-2025,
+          # windows-2025,
           macos-14,
         ]
         python-version: [
@@ -53,10 +53,10 @@ jobs:
         run: |
           brew install openblas
 
-      - name: Install additional dependencies (Windows)
-        if: matrix.os == 'windows-2025'
-        run: |
-          choco install openblas
+      # - name: Install additional dependencies (Windows)
+      #   if: matrix.os == 'windows-2025'
+      #   run: |
+      #     choco install openblas
 
       - name: Activate virtual environment (Windows)
         if: matrix.os == 'windows-2025'
