--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,6 @@ jobs:
       matrix:
         os: [
           ubuntu-24.04,
-          # windows-2025,
-          macos-14,
         ]
         python-version: [
           '3.9',
@@ -42,29 +40,12 @@ jobs:
         run: |
           python -m venv .venv
 
-      - name: Install additional dependencies (Linux)
-        if: matrix.os == 'ubuntu-24.04'
+      - name: Install additional dependencies
         run: |
           sudo apt-get update
           sudo apt install -y libopenblas-dev 
 
-      - name: Install additional dependencies (macOS)
-        if: matrix.os == 'macos-14'
-        run: |
-          brew install openblas
-
-      # - name: Install additional dependencies (Windows)
-      #   if: matrix.os == 'windows-2025'
-      #   run: |
-      #     choco install openblas
-
-      - name: Activate virtual environment (Windows)
-        if: matrix.os == 'windows-2025'
-        run: |
-          .venv\Scripts\activate
-
-      - name: Activate virtual environment (Linux/macOS)
-        if: matrix.os != 'windows-2025'
+      - name: Activate virtual environment
         run: |
           source .venv/bin/activate
 
